[metadata]
name = examplecommon
version = 1.0.0
description = Add a short description here!
author = Mark McClain
author-email = mjm461@gmail.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	=src
install_requires = \
	pyawsstarter
	requests==2.22.0
dependency_links = 
	git+https://github.com/mjm461/pyawsstarter.git@tox#egg=pyawsstarter

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest
	pytest-cov

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts = 
	--cov examplecommon --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[easy_install]

