[metadata]
name = examplecommon
description = Add a short description here!
author = Mark McClain
author-email = mjm461@gmail.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project-urls = 
	Documentation = https://pyscaffold.org/
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	=src
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = 
	pyawsstarter==0.0.1
	requests==2.22.0
dependency_links = 
	git+https://github.com/mjm461/pyawsstarter.git@0.0.1#egg=pyawsstarter-0.0.1

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest
	pytest-cov

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts = 
	--cov examplecommon --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 3.2.3
package = examplecommon

[easy_install]
find-links = ['git+https://github.com/mjm461/pyawsstarter.git@0.0.1#egg=pyawsstarter-0.0.1', 'file:../examplecommon#egg=examplecommon']

