[metadata]
name = wordservice
version = 1.0.0
description = Add a short description here!
author = Mark McClain
author-email = mjm461@gmail.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires = \
    pyawsstarter
    flask==1.1.1
    flask_injector==0.12.0
    flask_redis==0.4.0
    structlog==19.2.0

dependency_links =
    git+https://github.com/mjm461/pyawsstarter.git@tox#egg=pyawsstarter

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    mockredispy==2.9.3

[options.entry_points]

[test]

[tool:pytest]
addopts =
    --cov wordservice --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
